Seting of launch.json works.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,16 +31,19 @@ else()
     message(STATUS "ITK package found at ${ITK_DIR}")
 endif()
 
+
 include(${ITK_USE_FILE})
 
 set(CMAKE_SKIP_BUILD_RPATH TRUE)
 # Note that shared libraries are install into /lib or /bin directory for linux or windows. 
-set(ITK_LIBRARY_PATH "${CMAKE_CURRENT_LIST_DIR}/thirdparties/itk/$<IF:$<BOOL:${WIN32}>,bin,lib>/")
-set(ENV{LD_LIBRARY_PATH} "${ITK_LIBRARY_PATH}:$ENV{LD_LIBRARY_PATH}")
+# set(ITK_LIBRARY_PATH "${CMAKE_CURRENT_LIST_DIR}/thirdparties/itk/$<IF:$<BOOL:${WIN32}>,bin,lib>/")
+set(ITK_LIBRARY_PATH "${CMAKE_INSTALL_PREFIX}/lib")
+
+# set(ENV{LD_LIBRARY_PATH} "${ITK_LIBRARY_PATH}:$ENV{LD_LIBRARY_PATH}")
 # Specifies the runtime search path (rpath) for the executable. Multiple paths are supported.
 set(CMAKE_INSTALL_RPATH ${ITK_LIBRARY_PATH})
 # Build into the rpath into the executable, to avoid the library not found error when you run it.
-set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
+set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
 # Automatically adds directories that contain libraries linked to the executable to the rpath
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH FALSE)
 
@@ -100,11 +103,11 @@ endif()
 
 
 install(TARGETS AtlasSeg
-    RUNTIME_DEPENDENCIES
-    DIRECTORIES ${ITK_LIBRARY_PATH}
-    PRE_EXCLUDE_REGEXES "api-ms-" "ext-ms-"
-    POST_EXCLUDE_REGEXES ".*system32/.*\\.dll"
-    RUNTIME DESTINATION "$<IF:$<BOOL:${WIN32}>,bin,bin>" # dll
+    # RUNTIME_DEPENDENCIES
+    # DIRECTORIES "${CMAKE_CURRENT_LIST_DIR}/thirdparties/itk/lib"
+    # PRE_EXCLUDE_REGEXES "api-ms-" "ext-ms-"
+    # POST_EXCLUDE_REGEXES ".*system32/.*\\.dll"
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} #"$<IF:$<BOOL:${WIN32}>,bin,bin>" # dll
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} # shared libraries but not dll (not useful)
     ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} # mrobjects_static.lib
     OBJECTS DESTINATION ${CMAKE_INSTALL_LIBDIR} # installation for object files *.obj
