--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,33 +1,31 @@
 {
     "version": "0.2.0",
     "configurations": [
+
         {
-            "name": "C++ Debug",
-            "type": "cppdbg",
+            "name": "(msvc) Launch",
+            "type": "cppvsdbg",
             "request": "launch",
-            "program": "${fileDirname}/${fileBasenameNoExtension}",
+            "program": "${command:cmake.launchTargetPath}",
             "args": [],
-            "stopAtEntry": false,
+            "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "setupCommands": [
+            "environment": [
                 {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
+                    // add the directory where our target was built to the PATHs
+                    // it gets resolved by CMake Tools:
+                    "name": "PATH",
+                    "value": "${env:PATH};${command:cmake.getLaunchTargetDirectory};${workspaceFolder}\\thirdparties\\itk\\bin;C:\\Users\\ntmy\\GitRepos\\pp\\thirdparties\\itk\\bin"
                 }
             ],
-            "preLaunchTask": "build",
-            "miDebuggerPath": "/usr/bin/gdb",
+            "externalConsole": true,
             "logging": {
-                "trace": true,
-                "traceResponse": true,
-                "engineLogging": true,
-                "programOutput": true,
-                "exceptions": true
-            }
+                "trace": false,
+                "traceResponse": false,
+                "engineLogging": false,
+                "programOutput": false,
+                "exceptions": false
+            }            
         },
         {
             "name": "(gdb) Launch",
@@ -35,7 +33,7 @@
             "request": "launch",
             "program": "${command:cmake.launchTargetPath}",
             "args": [],
-            "stopAtEntry": false,
+            "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
             "environment": [
                 {
